# ISMA

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD.md  TECH_STACK_REPORT.md
bdc-peinture/: .env.example  .gitignore  Dockerfile  docker-compose.lan.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tailwind.config.js
bdc-peinture/.github/workflows/: ci.yml  deploy.yml
bdc-peinture/apps/accounts/: decorators.py  forms.py  models.py  urls.py  urls_gestion.py  views.py
bdc-peinture/apps/bdc/: admin.py  apps.py  exports.py  fiche_chantier.py  filters.py  forms.py  masquage_pdf.py  models.py  notifications.py  periode.py  releves.py  releves_export.py  services.py  terrain.py  urls.py  views.py  views_bibliotheque.py
bdc-peinture/apps/monitoring/: middleware.py  models.py  urls.py  views.py
bdc-peinture/apps/notifications/: alertes.py  backends.py  email.py  sms.py
bdc-peinture/apps/pdf_extraction/: apps.py  base.py  detector.py  erilia_parser.py  gdh_parser.py  services.py  template_parser.py
bdc-peinture/config/: urls.py  wsgi.py
bdc-peinture/config/settings/: base.py  (+6 more)
bdc-peinture/docs/: MEMO-TERRAIN-PDF-UNIFIE.md
bdc-peinture/e2e/: test_bailleur_fiche.py  test_bibliotheque_search_sort.py  test_revue_securite.py  test_upload_erilia_multipage.py  test_upload_prod_gdh.py
bdc-peinture/nginx/: nginx-bootstrap.conf  nginx.conf
bdc-peinture/scripts/: backup.sh  deploy.sh  initial_setup.sh
bdc-peinture/static/: manifest.json
bdc-peinture/templates/: 404.html  500.html  base.html
bdc-peinture/tests/: conftest.py  test_e2e_upload_40_pdfs.py
(+293 files in other folders)
